source/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> main_class class_s
Rule 2     start -> main_class
Rule 3     main_class -> CLASS id L_BRACKET PUBLIC STATIC_VOID_MAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET
Rule 4     class_s -> class_s class
Rule 5     class_s -> class
Rule 6     class -> CLASS id L_BRACKET R_BRACKET
Rule 7     class -> CLASS id L_BRACKET var_s R_BRACKET
Rule 8     class -> CLASS id L_BRACKET method_s R_BRACKET
Rule 9     class -> CLASS id L_BRACKET var_s method_s R_BRACKET
Rule 10    class -> CLASS id EXTENDS id L_BRACKET R_BRACKET
Rule 11    class -> CLASS id EXTENDS id L_BRACKET var_s R_BRACKET
Rule 12    class -> CLASS id EXTENDS id L_BRACKET method_s R_BRACKET
Rule 13    class -> CLASS id EXTENDS id L_BRACKET var_s method_s R_BRACKET
Rule 14    var_s -> var_s var
Rule 15    var_s -> var
Rule 16    var -> type id SEMICOLON
Rule 17    method_s -> method_s method
Rule 18    method_s -> method
Rule 19    method -> modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
Rule 20    method -> modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
Rule 21    method -> modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
Rule 22    method -> modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
Rule 23    arg_s -> empty
Rule 24    arg_s -> arg_s COMMA arg
Rule 25    arg_s -> arg
Rule 26    arg -> type id
Rule 27    modifier -> PUBLIC
Rule 28    modifier -> PRIVATE
Rule 29    type -> INT L_SQUARE R_SQUARE
Rule 30    type -> BOOLEAN
Rule 31    type -> INT
Rule 32    type -> id
Rule 33    statement_s -> statement_s statement
Rule 34    statement_s -> statement
Rule 35    statement -> L_BRACKET statement_s R_BRACKET
Rule 36    statement -> IF L_ROUND exp R_ROUND statement ELSE statement
Rule 37    statement -> WHILE L_ROUND exp R_ROUND statement
Rule 38    statement -> SYSTEM_OUT_PRINTLN L_ROUND exp R_ROUND SEMICOLON
Rule 39    statement -> id EQUALS exp SEMICOLON
Rule 40    statement -> id L_SQUARE exp R_SQUARE EQUALS exp SEMICOLON
Rule 41    exp_s -> exp_s COMMA exp
Rule 42    exp_s -> exp
Rule 43    exp -> exp L_SQUARE exp R_SQUARE
Rule 44    exp -> exp DOT LENGTH
Rule 45    exp -> exp DOT id L_ROUND R_ROUND
Rule 46    exp -> exp DOT id L_ROUND exp_s R_ROUND
Rule 47    exp -> INTEGER
Rule 48    exp -> TRUE
Rule 49    exp -> FALSE
Rule 50    exp -> id
Rule 51    exp -> THIS
Rule 52    exp -> NEW INT L_SQUARE exp R_SQUARE
Rule 53    exp -> NEW id L_ROUND R_ROUND
Rule 54    exp -> BANG exp
Rule 55    exp -> L_ROUND exp R_ROUND
Rule 56    exp -> exp AND exp
Rule 57    exp -> exp LESS exp
Rule 58    exp -> exp PLUS exp
Rule 59    exp -> exp MINUS exp
Rule 60    exp -> exp STAR exp
Rule 61    exp -> exp PERCENT exp
Rule 62    exp -> exp OR exp
Rule 63    id -> ID
Rule 64    empty -> <empty>

Terminals, with rules where they appear

AND                  : 56
BANG                 : 54
BOOLEAN              : 30
CLASS                : 3 6 7 8 9 10 11 12 13
COMMA                : 24 41
COMMENT              : 
DOT                  : 44 45 46
ELSE                 : 36
EQUALS               : 39 40
EXTENDS              : 10 11 12 13
FALSE                : 49
ID                   : 63
IF                   : 36
INT                  : 29 31 52
INTEGER              : 47
LENGTH               : 44
LESS                 : 57
L_BRACKET            : 3 3 6 7 8 9 10 11 12 13 19 20 21 22 35
L_ROUND              : 3 19 20 21 22 36 37 38 45 46 53 55
L_SQUARE             : 3 29 40 43 52
MINUS                : 59
NEW                  : 52 53
OR                   : 62
PERCENT              : 61
PLUS                 : 58
PRIVATE              : 28
PUBLIC               : 3 27
RETURN               : 19 20 21 22
R_BRACKET            : 3 3 6 7 8 9 10 11 12 13 19 20 21 22 35
R_ROUND              : 3 19 20 21 22 36 37 38 45 46 53 55
R_SQUARE             : 3 29 40 43 52
SEMICOLON            : 16 19 20 21 22 38 39 40
STAR                 : 60
STATIC_VOID_MAIN     : 3
STRING               : 3
SYSTEM_OUT_PRINTLN   : 38
THIS                 : 51
TRUE                 : 48
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

arg                  : 24 25
arg_s                : 19 20 21 22 24
class                : 4 5
class_s              : 1 4
empty                : 23
exp                  : 19 20 21 22 36 37 38 39 40 40 41 42 43 43 44 45 46 52 54 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62
exp_s                : 41 46
id                   : 3 3 6 7 8 9 10 10 11 11 12 12 13 13 16 19 20 21 22 26 32 39 40 45 46 50 53
main_class           : 1 2
method               : 17 18
method_s             : 8 9 12 13 17
modifier             : 19 20 21 22
start                : 0
statement            : 33 34 36 36 37
statement_s          : 3 19 21 33 35
type                 : 16 19 20 21 22 26
var                  : 14 15
var_s                : 7 9 11 13 14 19 20

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . main_class class_s
    (2) start -> . main_class
    (3) main_class -> . CLASS id L_BRACKET PUBLIC STATIC_VOID_MAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    CLASS           shift and go to state 3

    start                          shift and go to state 1
    main_class                     shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> main_class . class_s
    (2) start -> main_class .
    (4) class_s -> . class_s class
    (5) class_s -> . class
    (6) class -> . CLASS id L_BRACKET R_BRACKET
    (7) class -> . CLASS id L_BRACKET var_s R_BRACKET
    (8) class -> . CLASS id L_BRACKET method_s R_BRACKET
    (9) class -> . CLASS id L_BRACKET var_s method_s R_BRACKET
    (10) class -> . CLASS id EXTENDS id L_BRACKET R_BRACKET
    (11) class -> . CLASS id EXTENDS id L_BRACKET var_s R_BRACKET
    (12) class -> . CLASS id EXTENDS id L_BRACKET method_s R_BRACKET
    (13) class -> . CLASS id EXTENDS id L_BRACKET var_s method_s R_BRACKET

    $end            reduce using rule 2 (start -> main_class .)
    CLASS           shift and go to state 6

    class_s                        shift and go to state 4
    class                          shift and go to state 5

state 3

    (3) main_class -> CLASS . id L_BRACKET PUBLIC STATIC_VOID_MAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET
    (63) id -> . ID

    ID              shift and go to state 8

    id                             shift and go to state 7

state 4

    (1) start -> main_class class_s .
    (4) class_s -> class_s . class
    (6) class -> . CLASS id L_BRACKET R_BRACKET
    (7) class -> . CLASS id L_BRACKET var_s R_BRACKET
    (8) class -> . CLASS id L_BRACKET method_s R_BRACKET
    (9) class -> . CLASS id L_BRACKET var_s method_s R_BRACKET
    (10) class -> . CLASS id EXTENDS id L_BRACKET R_BRACKET
    (11) class -> . CLASS id EXTENDS id L_BRACKET var_s R_BRACKET
    (12) class -> . CLASS id EXTENDS id L_BRACKET method_s R_BRACKET
    (13) class -> . CLASS id EXTENDS id L_BRACKET var_s method_s R_BRACKET

    $end            reduce using rule 1 (start -> main_class class_s .)
    CLASS           shift and go to state 6

    class                          shift and go to state 9

state 5

    (5) class_s -> class .

    CLASS           reduce using rule 5 (class_s -> class .)
    $end            reduce using rule 5 (class_s -> class .)


state 6

    (6) class -> CLASS . id L_BRACKET R_BRACKET
    (7) class -> CLASS . id L_BRACKET var_s R_BRACKET
    (8) class -> CLASS . id L_BRACKET method_s R_BRACKET
    (9) class -> CLASS . id L_BRACKET var_s method_s R_BRACKET
    (10) class -> CLASS . id EXTENDS id L_BRACKET R_BRACKET
    (11) class -> CLASS . id EXTENDS id L_BRACKET var_s R_BRACKET
    (12) class -> CLASS . id EXTENDS id L_BRACKET method_s R_BRACKET
    (13) class -> CLASS . id EXTENDS id L_BRACKET var_s method_s R_BRACKET
    (63) id -> . ID

    ID              shift and go to state 8

    id                             shift and go to state 10

state 7

    (3) main_class -> CLASS id . L_BRACKET PUBLIC STATIC_VOID_MAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    L_BRACKET       shift and go to state 11


state 8

    (63) id -> ID .

    L_BRACKET       reduce using rule 63 (id -> ID .)
    EXTENDS         reduce using rule 63 (id -> ID .)
    ID              reduce using rule 63 (id -> ID .)
    SEMICOLON       reduce using rule 63 (id -> ID .)
    L_ROUND         reduce using rule 63 (id -> ID .)
    R_ROUND         reduce using rule 63 (id -> ID .)
    COMMA           reduce using rule 63 (id -> ID .)
    EQUALS          reduce using rule 63 (id -> ID .)
    L_SQUARE        reduce using rule 63 (id -> ID .)
    DOT             reduce using rule 63 (id -> ID .)
    AND             reduce using rule 63 (id -> ID .)
    LESS            reduce using rule 63 (id -> ID .)
    PLUS            reduce using rule 63 (id -> ID .)
    MINUS           reduce using rule 63 (id -> ID .)
    STAR            reduce using rule 63 (id -> ID .)
    PERCENT         reduce using rule 63 (id -> ID .)
    OR              reduce using rule 63 (id -> ID .)
    R_SQUARE        reduce using rule 63 (id -> ID .)


state 9

    (4) class_s -> class_s class .

    CLASS           reduce using rule 4 (class_s -> class_s class .)
    $end            reduce using rule 4 (class_s -> class_s class .)


state 10

    (6) class -> CLASS id . L_BRACKET R_BRACKET
    (7) class -> CLASS id . L_BRACKET var_s R_BRACKET
    (8) class -> CLASS id . L_BRACKET method_s R_BRACKET
    (9) class -> CLASS id . L_BRACKET var_s method_s R_BRACKET
    (10) class -> CLASS id . EXTENDS id L_BRACKET R_BRACKET
    (11) class -> CLASS id . EXTENDS id L_BRACKET var_s R_BRACKET
    (12) class -> CLASS id . EXTENDS id L_BRACKET method_s R_BRACKET
    (13) class -> CLASS id . EXTENDS id L_BRACKET var_s method_s R_BRACKET

    L_BRACKET       shift and go to state 12
    EXTENDS         shift and go to state 13


state 11

    (3) main_class -> CLASS id L_BRACKET . PUBLIC STATIC_VOID_MAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    PUBLIC          shift and go to state 14


state 12

    (6) class -> CLASS id L_BRACKET . R_BRACKET
    (7) class -> CLASS id L_BRACKET . var_s R_BRACKET
    (8) class -> CLASS id L_BRACKET . method_s R_BRACKET
    (9) class -> CLASS id L_BRACKET . var_s method_s R_BRACKET
    (14) var_s -> . var_s var
    (15) var_s -> . var
    (17) method_s -> . method_s method
    (18) method_s -> . method
    (16) var -> . type id SEMICOLON
    (19) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (29) type -> . INT L_SQUARE R_SQUARE
    (30) type -> . BOOLEAN
    (31) type -> . INT
    (32) type -> . id
    (27) modifier -> . PUBLIC
    (28) modifier -> . PRIVATE
    (63) id -> . ID

    R_BRACKET       shift and go to state 16
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26
    ID              shift and go to state 8

    id                             shift and go to state 15
    var_s                          shift and go to state 17
    method_s                       shift and go to state 18
    var                            shift and go to state 19
    method                         shift and go to state 20
    type                           shift and go to state 21
    modifier                       shift and go to state 22

state 13

    (10) class -> CLASS id EXTENDS . id L_BRACKET R_BRACKET
    (11) class -> CLASS id EXTENDS . id L_BRACKET var_s R_BRACKET
    (12) class -> CLASS id EXTENDS . id L_BRACKET method_s R_BRACKET
    (13) class -> CLASS id EXTENDS . id L_BRACKET var_s method_s R_BRACKET
    (63) id -> . ID

    ID              shift and go to state 8

    id                             shift and go to state 27

state 14

    (3) main_class -> CLASS id L_BRACKET PUBLIC . STATIC_VOID_MAIN L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    STATIC_VOID_MAIN shift and go to state 28


state 15

    (32) type -> id .

    ID              reduce using rule 32 (type -> id .)


state 16

    (6) class -> CLASS id L_BRACKET R_BRACKET .

    CLASS           reduce using rule 6 (class -> CLASS id L_BRACKET R_BRACKET .)
    $end            reduce using rule 6 (class -> CLASS id L_BRACKET R_BRACKET .)


state 17

    (7) class -> CLASS id L_BRACKET var_s . R_BRACKET
    (9) class -> CLASS id L_BRACKET var_s . method_s R_BRACKET
    (14) var_s -> var_s . var
    (17) method_s -> . method_s method
    (18) method_s -> . method
    (16) var -> . type id SEMICOLON
    (19) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (29) type -> . INT L_SQUARE R_SQUARE
    (30) type -> . BOOLEAN
    (31) type -> . INT
    (32) type -> . id
    (27) modifier -> . PUBLIC
    (28) modifier -> . PRIVATE
    (63) id -> . ID

    R_BRACKET       shift and go to state 29
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26
    ID              shift and go to state 8

    id                             shift and go to state 15
    method_s                       shift and go to state 30
    var                            shift and go to state 31
    method                         shift and go to state 20
    type                           shift and go to state 21
    modifier                       shift and go to state 22

state 18

    (8) class -> CLASS id L_BRACKET method_s . R_BRACKET
    (17) method_s -> method_s . method
    (19) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (27) modifier -> . PUBLIC
    (28) modifier -> . PRIVATE

    R_BRACKET       shift and go to state 32
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26

    method                         shift and go to state 33
    modifier                       shift and go to state 22

state 19

    (15) var_s -> var .

    R_BRACKET       reduce using rule 15 (var_s -> var .)
    INT             reduce using rule 15 (var_s -> var .)
    BOOLEAN         reduce using rule 15 (var_s -> var .)
    PUBLIC          reduce using rule 15 (var_s -> var .)
    PRIVATE         reduce using rule 15 (var_s -> var .)
    ID              reduce using rule 15 (var_s -> var .)
    RETURN          reduce using rule 15 (var_s -> var .)
    L_BRACKET       reduce using rule 15 (var_s -> var .)
    IF              reduce using rule 15 (var_s -> var .)
    WHILE           reduce using rule 15 (var_s -> var .)
    SYSTEM_OUT_PRINTLN reduce using rule 15 (var_s -> var .)


state 20

    (18) method_s -> method .

    R_BRACKET       reduce using rule 18 (method_s -> method .)
    PUBLIC          reduce using rule 18 (method_s -> method .)
    PRIVATE         reduce using rule 18 (method_s -> method .)


state 21

    (16) var -> type . id SEMICOLON
    (63) id -> . ID

    ID              shift and go to state 8

    id                             shift and go to state 34

state 22

    (19) method -> modifier . type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> modifier . type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> modifier . type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> modifier . type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (29) type -> . INT L_SQUARE R_SQUARE
    (30) type -> . BOOLEAN
    (31) type -> . INT
    (32) type -> . id
    (63) id -> . ID

    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    ID              shift and go to state 8

    type                           shift and go to state 35
    id                             shift and go to state 15

state 23

    (29) type -> INT . L_SQUARE R_SQUARE
    (31) type -> INT .

    L_SQUARE        shift and go to state 36
    ID              reduce using rule 31 (type -> INT .)


state 24

    (30) type -> BOOLEAN .

    ID              reduce using rule 30 (type -> BOOLEAN .)


state 25

    (27) modifier -> PUBLIC .

    INT             reduce using rule 27 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 27 (modifier -> PUBLIC .)
    ID              reduce using rule 27 (modifier -> PUBLIC .)


state 26

    (28) modifier -> PRIVATE .

    INT             reduce using rule 28 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 28 (modifier -> PRIVATE .)
    ID              reduce using rule 28 (modifier -> PRIVATE .)


state 27

    (10) class -> CLASS id EXTENDS id . L_BRACKET R_BRACKET
    (11) class -> CLASS id EXTENDS id . L_BRACKET var_s R_BRACKET
    (12) class -> CLASS id EXTENDS id . L_BRACKET method_s R_BRACKET
    (13) class -> CLASS id EXTENDS id . L_BRACKET var_s method_s R_BRACKET

    L_BRACKET       shift and go to state 37


state 28

    (3) main_class -> CLASS id L_BRACKET PUBLIC STATIC_VOID_MAIN . L_ROUND STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    L_ROUND         shift and go to state 38


state 29

    (7) class -> CLASS id L_BRACKET var_s R_BRACKET .

    CLASS           reduce using rule 7 (class -> CLASS id L_BRACKET var_s R_BRACKET .)
    $end            reduce using rule 7 (class -> CLASS id L_BRACKET var_s R_BRACKET .)


state 30

    (9) class -> CLASS id L_BRACKET var_s method_s . R_BRACKET
    (17) method_s -> method_s . method
    (19) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (27) modifier -> . PUBLIC
    (28) modifier -> . PRIVATE

    R_BRACKET       shift and go to state 39
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26

    method                         shift and go to state 33
    modifier                       shift and go to state 22

state 31

    (14) var_s -> var_s var .

    R_BRACKET       reduce using rule 14 (var_s -> var_s var .)
    INT             reduce using rule 14 (var_s -> var_s var .)
    BOOLEAN         reduce using rule 14 (var_s -> var_s var .)
    PUBLIC          reduce using rule 14 (var_s -> var_s var .)
    PRIVATE         reduce using rule 14 (var_s -> var_s var .)
    ID              reduce using rule 14 (var_s -> var_s var .)
    RETURN          reduce using rule 14 (var_s -> var_s var .)
    L_BRACKET       reduce using rule 14 (var_s -> var_s var .)
    IF              reduce using rule 14 (var_s -> var_s var .)
    WHILE           reduce using rule 14 (var_s -> var_s var .)
    SYSTEM_OUT_PRINTLN reduce using rule 14 (var_s -> var_s var .)


state 32

    (8) class -> CLASS id L_BRACKET method_s R_BRACKET .

    CLASS           reduce using rule 8 (class -> CLASS id L_BRACKET method_s R_BRACKET .)
    $end            reduce using rule 8 (class -> CLASS id L_BRACKET method_s R_BRACKET .)


state 33

    (17) method_s -> method_s method .

    R_BRACKET       reduce using rule 17 (method_s -> method_s method .)
    PUBLIC          reduce using rule 17 (method_s -> method_s method .)
    PRIVATE         reduce using rule 17 (method_s -> method_s method .)


state 34

    (16) var -> type id . SEMICOLON

    SEMICOLON       shift and go to state 40


state 35

    (19) method -> modifier type . id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> modifier type . id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> modifier type . id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> modifier type . id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (63) id -> . ID

    ID              shift and go to state 8

    id                             shift and go to state 41

state 36

    (29) type -> INT L_SQUARE . R_SQUARE

    R_SQUARE        shift and go to state 42


state 37

    (10) class -> CLASS id EXTENDS id L_BRACKET . R_BRACKET
    (11) class -> CLASS id EXTENDS id L_BRACKET . var_s R_BRACKET
    (12) class -> CLASS id EXTENDS id L_BRACKET . method_s R_BRACKET
    (13) class -> CLASS id EXTENDS id L_BRACKET . var_s method_s R_BRACKET
    (14) var_s -> . var_s var
    (15) var_s -> . var
    (17) method_s -> . method_s method
    (18) method_s -> . method
    (16) var -> . type id SEMICOLON
    (19) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (29) type -> . INT L_SQUARE R_SQUARE
    (30) type -> . BOOLEAN
    (31) type -> . INT
    (32) type -> . id
    (27) modifier -> . PUBLIC
    (28) modifier -> . PRIVATE
    (63) id -> . ID

    R_BRACKET       shift and go to state 43
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26
    ID              shift and go to state 8

    id                             shift and go to state 15
    var_s                          shift and go to state 44
    method_s                       shift and go to state 45
    var                            shift and go to state 19
    method                         shift and go to state 20
    type                           shift and go to state 21
    modifier                       shift and go to state 22

state 38

    (3) main_class -> CLASS id L_BRACKET PUBLIC STATIC_VOID_MAIN L_ROUND . STRING L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    STRING          shift and go to state 46


state 39

    (9) class -> CLASS id L_BRACKET var_s method_s R_BRACKET .

    CLASS           reduce using rule 9 (class -> CLASS id L_BRACKET var_s method_s R_BRACKET .)
    $end            reduce using rule 9 (class -> CLASS id L_BRACKET var_s method_s R_BRACKET .)


state 40

    (16) var -> type id SEMICOLON .

    R_BRACKET       reduce using rule 16 (var -> type id SEMICOLON .)
    INT             reduce using rule 16 (var -> type id SEMICOLON .)
    BOOLEAN         reduce using rule 16 (var -> type id SEMICOLON .)
    PUBLIC          reduce using rule 16 (var -> type id SEMICOLON .)
    PRIVATE         reduce using rule 16 (var -> type id SEMICOLON .)
    ID              reduce using rule 16 (var -> type id SEMICOLON .)
    RETURN          reduce using rule 16 (var -> type id SEMICOLON .)
    L_BRACKET       reduce using rule 16 (var -> type id SEMICOLON .)
    IF              reduce using rule 16 (var -> type id SEMICOLON .)
    WHILE           reduce using rule 16 (var -> type id SEMICOLON .)
    SYSTEM_OUT_PRINTLN reduce using rule 16 (var -> type id SEMICOLON .)


state 41

    (19) method -> modifier type id . L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> modifier type id . L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> modifier type id . L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> modifier type id . L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET

    L_ROUND         shift and go to state 47


state 42

    (29) type -> INT L_SQUARE R_SQUARE .

    ID              reduce using rule 29 (type -> INT L_SQUARE R_SQUARE .)


state 43

    (10) class -> CLASS id EXTENDS id L_BRACKET R_BRACKET .

    CLASS           reduce using rule 10 (class -> CLASS id EXTENDS id L_BRACKET R_BRACKET .)
    $end            reduce using rule 10 (class -> CLASS id EXTENDS id L_BRACKET R_BRACKET .)


state 44

    (11) class -> CLASS id EXTENDS id L_BRACKET var_s . R_BRACKET
    (13) class -> CLASS id EXTENDS id L_BRACKET var_s . method_s R_BRACKET
    (14) var_s -> var_s . var
    (17) method_s -> . method_s method
    (18) method_s -> . method
    (16) var -> . type id SEMICOLON
    (19) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (29) type -> . INT L_SQUARE R_SQUARE
    (30) type -> . BOOLEAN
    (31) type -> . INT
    (32) type -> . id
    (27) modifier -> . PUBLIC
    (28) modifier -> . PRIVATE
    (63) id -> . ID

    R_BRACKET       shift and go to state 48
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26
    ID              shift and go to state 8

    id                             shift and go to state 15
    method_s                       shift and go to state 49
    var                            shift and go to state 31
    method                         shift and go to state 20
    type                           shift and go to state 21
    modifier                       shift and go to state 22

state 45

    (12) class -> CLASS id EXTENDS id L_BRACKET method_s . R_BRACKET
    (17) method_s -> method_s . method
    (19) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (27) modifier -> . PUBLIC
    (28) modifier -> . PRIVATE

    R_BRACKET       shift and go to state 50
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26

    method                         shift and go to state 33
    modifier                       shift and go to state 22

state 46

    (3) main_class -> CLASS id L_BRACKET PUBLIC STATIC_VOID_MAIN L_ROUND STRING . L_SQUARE R_SQUARE id R_ROUND L_BRACKET statement_s R_BRACKET R_BRACKET

    L_SQUARE        shift and go to state 51


state 47

    (19) method -> modifier type id L_ROUND . arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> modifier type id L_ROUND . arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> modifier type id L_ROUND . arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> modifier type id L_ROUND . arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (23) arg_s -> . empty
    (24) arg_s -> . arg_s COMMA arg
    (25) arg_s -> . arg
    (64) empty -> .
    (26) arg -> . type id
    (29) type -> . INT L_SQUARE R_SQUARE
    (30) type -> . BOOLEAN
    (31) type -> . INT
    (32) type -> . id
    (63) id -> . ID

    R_ROUND         reduce using rule 64 (empty -> .)
    COMMA           reduce using rule 64 (empty -> .)
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    ID              shift and go to state 8

    type                           shift and go to state 52
    id                             shift and go to state 15
    arg_s                          shift and go to state 53
    empty                          shift and go to state 54
    arg                            shift and go to state 55

state 48

    (11) class -> CLASS id EXTENDS id L_BRACKET var_s R_BRACKET .

    CLASS           reduce using rule 11 (class -> CLASS id EXTENDS id L_BRACKET var_s R_BRACKET .)
    $end            reduce using rule 11 (class -> CLASS id EXTENDS id L_BRACKET var_s R_BRACKET .)


state 49

    (13) class -> CLASS id EXTENDS id L_BRACKET var_s method_s . R_BRACKET
    (17) method_s -> method_s . method
    (19) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s statement_s RETURN exp SEMICOLON R_BRACKET
    (20) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET var_s RETURN exp SEMICOLON R_BRACKET
    (21) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET statement_s RETURN exp SEMICOLON R_BRACKET
    (22) method -> . modifier type id L_ROUND arg_s R_ROUND L_BRACKET RETURN exp SEMICOLON R_BRACKET
    (27) modifier -> . PUBLIC
    (28) modifier -> . PRIVATE

    R_BRACKET       shift and go to state 56
    PUBLIC          shift and go to state 25
    PRIVATE         shift and go to state 26

    method                         shift and go to state 33
    modifier                       shift and go to state 22

state 50

    (12) class -> CLASS id EXTENDS id L_BRACKET method_s R_BRACKET .

    CLASS           reduce using rule 12 (class -> CLASS id EXTENDS id L_BRACKET method_s R_BRACKET .)
    $end            reduce using rule 12 (class -> CLASS id EXTENDS id L_BRACKET method_s R_BRACKET .)


state 51
